@@ -7,6 +7,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static com.poec.projet_backend.util.Route.*;
 
@@ -21,7 +22,7 @@ public class DepartmentController {
     @GetMapping(ALL)
     public ResponseEntity<List<DepartmentDTO>> getAll() {
         List<Department> departments = service.getAll();
-        List<DepartmentDTO> departmentDTOS = departments.stream().map(DepartmentDTO::mapFromEntity).toList();
+        List<DepartmentDTO> departmentDTOS = departments.stream().map(DepartmentDTO::mapFromEntity).collect(Collectors.toList());
         return new ResponseEntity<>(departmentDTOS, HttpStatus.OK);
     }
 
@@ -32,9 +33,9 @@ public class DepartmentController {
         return new ResponseEntity<>(departmentDTO, HttpStatus.OK);
     }
 
-    @PostMapping(ADD)
-    public ResponseEntity<DepartmentDTO> add(@RequestBody Department department) {
-        Department newDepartment = service.add(department);
+    @PostMapping(ADD + REGION + ID) // api/v1/department/add/region/{id}
+    public ResponseEntity<DepartmentDTO> add(@RequestBody Department department, @PathVariable Long id) {
+        Department newDepartment = service.add(department, id);
         DepartmentDTO departmentDTO = DepartmentDTO.mapFromEntity(newDepartment);
         return new ResponseEntity<>(departmentDTO, HttpStatus.CREATED);
     }
